docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/card.mdx
---
title: Card
description: A Jetpack Compose Card component for displaying content in a styled container.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI Card matches the official Jetpack Compose [Card API](https://developer.android.com/develop/ui/compose/components/card) and displays content inside a styled surface container with optional elevation and outline. The `Card` component renders a [filled card](https://developer.android.com/develop/ui/compose/components/card#filled), while `ElevatedCard` and `OutlinedCard` provide raised and bordered variants respectively.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/card/android-light.webp"
  darkSrc="/static/images/expo-ui/card/android-dark.webp"
  alt="Filled, elevated, and outlined Material 3 cards"
/>

## Installation

<APIInstallSection />

## Usage

### Basic card

<ComponentExample
  title="BasicCardExample.tsx"
  src="/static/images/expo-ui/examples/card-basic-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/card-basic-android-dark.webp"
  alt="A filled Material 3 card holding a single line of padded text">

```tsx
import { Host, Card, Text } from '@expo/ui/jetpack-compose';
import { paddingAll } from '@expo/ui/jetpack-compose/modifiers';

export default function BasicCardExample() {
  return (
    <Host matchContents>
      <Card>
        <Text modifiers={[paddingAll(16)]}>
          This is a basic card with default styling.
        </Text>
      </Card>
    </Host>
  );
}
```

</ComponentExample>

### Card types

Use `Card` (filled), `ElevatedCard`, or `OutlinedCard` for different styles.

<ComponentExample
  title="CardTypesExample.tsx"
  src="/static/images/expo-ui/examples/card-types-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/card-types-android-dark.webp"
  alt="Filled, elevated, and outlined cards stacked in a column">

```tsx
import {
  Host,
  Card,
  ElevatedCard,
  OutlinedCard,
  Text,
  Column,
} from '@expo/ui/jetpack-compose';
import { paddingAll } from '@expo/ui/jetpack-compose/modifiers';

export default function CardTypesExample() {
  return (
    <Host matchContents>
      <Column verticalArrangement={{ spacedBy: 12 }}>
        <Card>
          <Text modifiers={[paddingAll(16)]}>Filled card</Text>
        </Card>
        <ElevatedCard>
          <Text modifiers={[paddingAll(16)]}>Elevated card</Text>
        </ElevatedCard>
        <OutlinedCard>
          <Text modifiers={[paddingAll(16)]}>Outlined card</Text>
        </OutlinedCard>
      </Column>
    </Host>
  );
}
```

</ComponentExample>

### Custom elevation

Use the `elevation` prop (in dp) to control shadow depth. Elevation is most meaningful on `ElevatedCard`, which uses shadow elevation. Filled `Card` uses tonal elevation by default, so changes may be subtle.

<ComponentExample
  title="ElevatedCardExample.tsx"
  src="/static/images/expo-ui/examples/card-elevated-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/card-elevated-android-dark.webp"
  alt="An elevated card casting a shadow at 8dp elevation">

```tsx
import { Host, ElevatedCard, Text } from '@expo/ui/jetpack-compose';
import { paddingAll } from '@expo/ui/jetpack-compose/modifiers';

export default function ElevatedCardExample() {
  return (
    <Host matchContents>
      <ElevatedCard elevation={8}>
        <Text modifiers={[paddingAll(16)]}>
          Card with 8dp elevation
        </Text>
      </ElevatedCard>
    </Host>
  );
}
```

</ComponentExample>

### Custom border

`Card` and `OutlinedCard` accept a `border` prop to customize stroke width and color.

<ComponentExample
  title="OutlinedCardExample.tsx"
  src="/static/images/expo-ui/examples/card-outlined-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/card-outlined-android-dark.webp"
  alt="An outlined card with a 2dp purple border">

```tsx
import { Host, OutlinedCard, Text } from '@expo/ui/jetpack-compose';
import { paddingAll } from '@expo/ui/jetpack-compose/modifiers';

export default function OutlinedCardExample() {
  return (
    <Host matchContents>
      <OutlinedCard border={{ width: 2, color: '#6200EE' }}>
        <Text modifiers={[paddingAll(16)]}>
          Card with custom purple border
        </Text>
      </OutlinedCard>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import {
  Card,
  ElevatedCard,
  OutlinedCard,
} from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/card"
  apiName="Card"
/>
